--- a/package.json
+++ b/package.json
@@ -3,18 +3,68 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "babel": {
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ],
+    "presets": [
+      "react-app"
+    ]
+  },
+  "browserslist": [
+    "> 1%",
+    "not dead"
+  ],
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "7.22.10",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "29.5.4",
+    "babel-preset-react-app": "10.0.1",
+    "classnames": "2.3.2",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "jest": "29.6.4",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-transition-group": "4.4.5",
+    "react-use": "17.4.0",
+    "rxjs": "7.8.1",
+    "sass": "1.66.1",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.18.13",
+    "@babel/eslint-parser": "7.18.9",
+    "@babel/preset-react": "7.18.6",
+    "@types/node": "18.7.13",
+    "@types/react": "18.2.21",
+    "@typescript-eslint/eslint-plugin": "6.4.1",
+    "@typescript-eslint/parser": "5.35.1",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19"
+    "eslint-config-eason": "0.0.12",
+    "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-html": "7.1.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "prettier": "3.0.2",
+    "typescript": "4.8.2"
   }
 }
